force-app/main/default/objects/Account/fields/EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>EmailDomain__c</fullName>
    <label>Email Domain</label>
    <length>80</length>
    <type>Text</type>
</CustomField>