force-app/main/default/objects/Account/fields/EmployeeRangeScore__c.field-meta.xml
<CustomField>
    <fullName>EmployeeRangeScore__c</fullName>
    <description>Based on EmployeesRange__c</description>
    <formula>Case(EmployeesRange__c,
&quot;1001-5000&quot;,50,
&quot;5000-10.000&quot;,75,
&quot;10.000+&quot;,100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmployeeRangeScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>