force-app/main/default/objects/Account/fields/Employees_Trained_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Employees_Trained_Last_12_Months__c</fullName>
    <label># Employees Trained Last 12 Months</label>
    <summarizedField>EducationReporting__c.NoStudentsCourseCompletion12Months__c</summarizedField>
    <summaryForeignKey>EducationReporting__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>