force-app/main/default/objects/Account/fields/EmployeesRange__c.field-meta.xml
<CustomField>
    <fullName>EmployeesRange__c</fullName>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EmployeesRange</valueSetName>
    </valueSet>
</CustomField>