force-app/main/default/objects/Account/fields/Enable_Clearbit_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Clearbit_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary checkbox created to Enable the selective enrichment of the account by Clearbit</description>
    <label>Enable Clearbit Enrichment</label>
    <type>Checkbox</type>
</CustomField>