force-app/main/default/objects/Account/fields/Engaged_On_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Engaged_On_Social_Media__c</fullName>
    <description>From DevRel</description>
    <inlineHelpText>Forum, GitHub, Twitter, Slack. Updated Quarterly by DevRel</inlineHelpText>
    <label># of Social Media Activities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>