force-app/main/default/objects/Account/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Using Camunda, Downloads, Events Registered, Meeting</description>
    <formula>(SQLLast120Days__c)*3 + 
(SQOLast120Days__c)*2 + 
(AccountQualificationCallsLast120Days__c)*2 + 
(Account_QualificationEventsLast120Days__c)*2+ 
ContactEngagementLast120Days__c + 
LeadEngagementLast120Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last120 Days: SQL+SQO+LinkedInContacts + Qual Calls + Campaigns</inlineHelpText>
    <label>deprecated - Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>