force-app/main/default/objects/Account/fields/EngagementAtStartofCohort__c.field-meta.xml
<CustomField>
    <fullName>EngagementAtStartofCohort__c</fullName>
    <description>Manual Stamp of Engagement Score at beginning of a cohort</description>
    <label>Deprecated - EngagementAtStartofCohort</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>