force-app/main/default/objects/Account/fields/EngagementAtStartofCohortJune__c.field-meta.xml
<CustomField>
    <fullName>EngagementAtStartofCohortJune__c</fullName>
    <description>June 2021 Cohort</description>
    <inlineHelpText>June 2021 Cohort</inlineHelpText>
    <label>Deprecated EngagementAtStartofCohortJune</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>