force-app/main/default/objects/Account/fields/EngagementAtStartofCohortSeptember__c.field-meta.xml
<CustomField>
    <fullName>EngagementAtStartofCohortSeptember__c</fullName>
    <description>Manually stamped</description>
    <label>EngagementAtStartofCohortSeptember</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>