force-app/main/default/objects/Account/fields/EngagementLast120Days__c.field-meta.xml
<CustomField>
    <fullName>EngagementLast120Days__c</fullName>
    <description>Lead+Contact Engagement</description>
    <formula>ContactEngagementLast120Days__c + LeadEngagementLast120Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - EngagementLast120Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>