force-app/main/default/objects/Account/fields/EngagementScoreABC__c.field-meta.xml
<CustomField>
    <fullName>EngagementScoreABC__c</fullName>
    <description>based on Hubspot_Score_without_Demographic__c</description>
    <formula>if( Hubspot_Score_without_Demographic__c &gt;=50,&quot;A&quot;,if(Hubspot_Score_without_Demographic__c &gt;=10,&quot;B&quot;,&quot;C&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Summary of associated lead/contact score</inlineHelpText>
    <label>EngagementScoreABC</label>
    <type>Text</type>
</CustomField>