force-app/main/default/objects/Account/fields/EngagementStamp__c.field-meta.xml
<CustomField>
    <fullName>EngagementStamp__c</fullName>
    <label>Deprecated - EngagementStamp</label>
    <length>4</length>
    <type>Text</type>
</CustomField>