force-app/main/default/objects/Account/fields/Enterprise_Customer__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Customer__c</fullName>
    <label>Enterprise Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>