force-app/main/default/objects/Account/fields/Est_IT_Department_Budget_in_000s__c.field-meta.xml
<CustomField>
    <fullName>Est_IT_Department_Budget_in_000s__c</fullName>
    <description>API from Zoominfo</description>
    <label>Zoominfo IT Department Budget (in 000s)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>