force-app/main/default/objects/Account/fields/Existing_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Existing_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Relationship</label>
    <type>Checkbox</type>
</CustomField>