force-app/main/default/objects/Account/fields/Expansion_Deal_Commission__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Deal_Commission__c</fullName>
    <label>% Expansion Entitlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>