force-app/main/default/objects/Account/fields/ExpansionPotential__c.field-meta.xml
<CustomField>
    <fullName>ExpansionPotential__c</fullName>
    <label>Expansion Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No focus, wait for project success</fullName>
            </value>
            <value>
                <fullName>Migrate to scope based license</fullName>
            </value>
            <value>
                <fullName>Actively look for new projects</fullName>
            </value>
            <value>
                <fullName>Expansion in the next 3 months</fullName>
            </value>
            <value>
                <fullName>Other, see comments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>