force-app/main/default/objects/Account/fields/ExpectedRenewalAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedRenewalAmount__c</fullName>
    <label>Expected Renewal Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>