force-app/main/default/objects/Account/fields/ExportCompliance__c.field-meta.xml
<CustomField>
    <fullName>ExportCompliance__c</fullName>
    <label>Compliance Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compliance_Check</valueSetName>
    </valueSet>
</CustomField>