force-app/main/default/objects/Account/fields/Fit_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Engagement_Score__c</fullName>
    <description>Fit Score - Engagement Score</description>
    <formula>X2024_Fit_Score__c&amp;&quot;-&quot;&amp; EngagementScoreABC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fit Score - Engagement Score</inlineHelpText>
    <label>Fit-Engagement Score</label>
    <type>Text</type>
</CustomField>