force-app/main/default/objects/Account/fields/Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Fit_Score__c</fullName>
    <description>Industry, Employee, Revenue, Legacy</description>
    <formula>Industry_Score__c*0.35 + EmployeeRangeScore__c*0.40 + IT_Score__c*0.15+(if(not(isblank( BPM_Product__c )),10,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deprecated - Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>