force-app/main/default/objects/Account/fields/FitScoreABC__c.field-meta.xml
<CustomField>
    <fullName>FitScoreABC__c</fullName>
    <description>Uses Fit_Score__c</description>
    <formula>if( Fit_Score__c &lt;56,&quot;C&quot;,if(Fit_Score__c&lt;75,&quot;B&quot;,&quot;A&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A: 77-100, B: 65-77, C: &lt;65</inlineHelpText>
    <label>Deprecated - Fit Score ABC</label>
    <type>Text</type>
</CustomField>