force-app/main/default/objects/Account/fields/Forbes_2000_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Forbes_2000_Ranking__c</fullName>
    <label>Forbes 2000 Ranking</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>