force-app/main/default/objects/Account/fields/G2_Most_Recent_Event__c.field-meta.xml
<CustomField>
    <fullName>G2_Most_Recent_Event__c</fullName>
    <formula>G2Crowd_VisitingOrganization__r.G2Crowd__Most_Recent_Event__c</formula>
    <label>G2 Most Recent Event</label>
    <type>DateTime</type>
</CustomField>