force-app/main/default/objects/Account/fields/G2Crowd_ActivityLevel__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd_ActivityLevel__c</fullName>
    <formula>G2Crowd_VisitingOrganization__r.G2Crowd__Activity_Level__c</formula>
    <label>G2 Activity Level</label>
    <type>Text</type>
</CustomField>