force-app/main/default/objects/Account/fields/G2Crowd_BuyingStage__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd_BuyingStage__c</fullName>
    <formula>G2Crowd_VisitingOrganization__r.G2Crowd__Buying_Stage__c</formula>
    <label>G2 Buying Stage</label>
    <type>Text</type>
</CustomField>