force-app/main/default/objects/Account/fields/G2Crowd_ComparisonMade__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd_ComparisonMade__c</fullName>
    <defaultValue>0</defaultValue>
    <label>G2 # of Comparisons Made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>