force-app/main/default/objects/Account/fields/G2Crowd_VisitingOrganization__c.field-meta.xml
<CustomField>
    <fullName>G2Crowd_VisitingOrganization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G2 Visiting Organization</label>
    <referenceTo>G2Crowd__G2_Visiting_Organization__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>