force-app/main/default/objects/Account/fields/Gainsight_C8_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Gainsight_C8_Health_Score__c</fullName>
    <description>Updated via Gainsight rule daily.</description>
    <inlineHelpText>Colour Ranges:
0-20 = Red
21-40 = Orange
41-60 = Yellow
61-80 = Lime Green
81-100 = Green</inlineHelpText>
    <label>Gainsight C8 Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>