force-app/main/default/objects/Account/fields/Gainsight_C8_Health_Score_Label__c.field-meta.xml
<CustomField>
    <fullName>Gainsight_C8_Health_Score_Label__c</fullName>
    <formula>IF( Gainsight_C8_Health_Score__c &gt; 80, &quot;Green&quot;, 
   IF( Gainsight_C8_Health_Score__c &gt; 60, &quot;Lime Green&quot;, 
      IF( Gainsight_C8_Health_Score__c &gt; 40, &quot;Yellow&quot;, 
         IF( Gainsight_C8_Health_Score__c &gt; 20, &quot;Orange&quot;, 
            IF( Gainsight_C8_Health_Score__c &gt;= 0, &quot;Red&quot;,
               NULL
               ) 
            )
         )
      ) 
   )</formula>
    <label>Gainsight C8 Health Score Label</label>
    <type>Text</type>
</CustomField>