force-app/main/default/objects/Account/fields/Growth_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Growth_Strategy__c</fullName>
    <description>used in account planning.</description>
    <inlineHelpText>For every target account we have a documented growth strategy that describes how we want to achieve our ARR goals. It is the link to exection (see below) and includes the specific tactics and activities we plan to apply to this account.</inlineHelpText>
    <label>Growth Strategy</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>