force-app/main/default/objects/Account/fields/Growthonics__c.field-meta.xml
<CustomField>
    <fullName>Growthonics__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account that Growthonics is sourcing</description>
    <label>Growthonics</label>
    <type>Checkbox</type>
</CustomField>