force-app/main/default/objects/Account/fields/GSIActive__c.field-meta.xml
<CustomField>
    <fullName>GSIActive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which GSI is most active?</inlineHelpText>
    <label>GSI Active</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (GSI Active)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>