force-app/main/default/objects/Account/fields/Has_Customer_Goal__c.field-meta.xml
<CustomField>
    <fullName>Has_Customer_Goal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether customer has a goal added to Gainsight. 

Source: GS Rules Engine

Owner: CS</description>
    <label>Has Customer Goal</label>
    <type>Checkbox</type>
</CustomField>