force-app/main/default/objects/Account/fields/HG_Account_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>HG_Account_Fit_Score__c</fullName>
    <label>HG Account Fit Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>