force-app/main/default/objects/Account/fields/HG_BPM_Budget__c.field-meta.xml
<CustomField>
    <fullName>HG_BPM_Budget__c</fullName>
    <description>Amount company has in 2021 budget for BPM</description>
    <inlineHelpText>Covid adjusted 2021 BPM Spend</inlineHelpText>
    <label>Annual BPM Budget</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>