force-app/main/default/objects/Account/fields/HG_BPM_of_IT__c.field-meta.xml
<CustomField>
    <fullName>HG_BPM_of_IT__c</fullName>
    <description>% of IT budget earmarked for BPM, covid adjusted, for 2021</description>
    <inlineHelpText>% of IT budget earmarked for BPM, covid adjusted, for 2021</inlineHelpText>
    <label>HG BPM % of IT</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>