force-app/main/default/objects/Account/fields/HG_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>HG_Company_ID__c</fullName>
    <description>HG Insights unique identifier for the end user on which the installation data, IT Spend and Contracts information is based.</description>
    <externalId>true</externalId>
    <inlineHelpText>HG Insights unique identifier for the end user on which the installation data, IT Spend and Contracts information is based.</inlineHelpText>
    <label>HG Company ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>