force-app/main/default/objects/Account/fields/HG_Company_Level__c.field-meta.xml
<CustomField>
    <fullName>HG_Company_Level__c</fullName>
    <description>Indicates the level of the given location in the corporate structure - &apos;Group HQ&apos; or &apos;Non Group HQ&apos; in HG Insights.</description>
    <inlineHelpText>Indicates the level of the given location in the corporate structure - &apos;Group HQ&apos; or &apos;Non Group HQ&apos; in HG Insights.</inlineHelpText>
    <label>HG Company Level</label>
    <type>TextArea</type>
</CustomField>