force-app/main/default/objects/Account/fields/HG_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>HG_Company_Name__c</fullName>
    <description>HG Insights&apos; business name of the company.</description>
    <inlineHelpText>HG Insights&apos; business name of the company.</inlineHelpText>
    <label>HG Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>