force-app/main/default/objects/Account/fields/HG_Country__c.field-meta.xml
<CustomField>
    <fullName>HG_Country__c</fullName>
    <description>HG Insights&apos;s name of the country in which the business is located.</description>
    <inlineHelpText>HG Insights&apos;s name of the country in which the business is located.</inlineHelpText>
    <label>HG Country</label>
    <type>TextArea</type>
</CustomField>