force-app/main/default/objects/Account/fields/HG_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>HG_Domain_Name__c</fullName>
    <description>HG Insights&apos; domain associated with the end user.</description>
    <inlineHelpText>HG Insights&apos; domain associated with the end user.</inlineHelpText>
    <label>HG Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>