force-app/main/default/objects/Account/fields/HG_DUNS__c.field-meta.xml
<CustomField>
    <fullName>HG_DUNS__c</fullName>
    <description>Count of unique DUNS returned for this product on the file from HG Insights.</description>
    <inlineHelpText>Count of unique DUNS returned for this product on the file from HG Insights</inlineHelpText>
    <label>HG DUNS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>