force-app/main/default/objects/Account/fields/HG_Employee_Band__c.field-meta.xml
<CustomField>
    <fullName>HG_Employee_Band__c</fullName>
    <description>HG Insights&apos; banding label to the number of people that are directly engaged and paid by the organization to perform or support its business operations to support grouping.</description>
    <inlineHelpText>HG Insights&apos; banding label to the number of people that are directly engaged and paid by the organization to perform or support its business operations to support grouping.</inlineHelpText>
    <label>HG Employee Band</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1. Less than 100</fullName>
            </value>
            <value>
                <fullName>2. 100 to 500</fullName>
            </value>
            <value>
                <fullName>3. 500 to 1,000</fullName>
            </value>
            <value>
                <fullName>4. 1,000 to 4,000</fullName>
            </value>
            <value>
                <fullName>5. 4,000 to 8,000</fullName>
            </value>
            <value>
                <fullName>6. 8,000 to 12,000</fullName>
            </value>
            <value>
                <fullName>7. 12,000 and above</fullName>
            </value>
            <value>
                <fullName>8. Under review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>