force-app/main/default/objects/Account/fields/HG_Group_HQ_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>HG_Group_HQ_Company_ID__c</fullName>
    <description>HG Insights unique identifier for the global ultimate organisation where the end user entity is part of larger organisation structure.</description>
    <externalId>true</externalId>
    <inlineHelpText>HG Insights unique identifier for the global ultimate organisation where the end user entity is part of larger organisation structure.</inlineHelpText>
    <label>HG Group HQ Company ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>