force-app/main/default/objects/Account/fields/HG_Industry_Name__c.field-meta.xml
<CustomField>
    <fullName>HG_Industry_Name__c</fullName>
    <description>HG Insights&apos; name of the industry in which the business primarily operates.</description>
    <inlineHelpText>HG Insights&apos; name of the industry in which the business primarily operates.</inlineHelpText>
    <label>HG Industry Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>