force-app/main/default/objects/Account/fields/HG_IT_Budget__c.field-meta.xml
<CustomField>
    <fullName>HG_IT_Budget__c</fullName>
    <description>Covid Adjusted IT Spend</description>
    <inlineHelpText>Covid Adjusted IT Spend for 2021</inlineHelpText>
    <label>Annual IT Budget</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>