force-app/main/default/objects/Account/fields/HG_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>HG_NAICS_Code__c</fullName>
    <description>HG Insights&apos; industry identifier as defined by NAICS-2012 in which the business primarily operates.</description>
    <inlineHelpText>HG Insights&apos; industry identifier as defined by NAICS-2012 in which the business primarily operates.</inlineHelpText>
    <label>HG NAICS Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>