force-app/main/default/objects/Account/fields/HG_NAICS_Industry__c.field-meta.xml
<CustomField>
    <fullName>HG_NAICS_Industry__c</fullName>
    <description>HG Insights&apos; industry name as specified by NAICS-2012 in which the business primarily operates.</description>
    <inlineHelpText>HG Insights&apos; industry name as specified by NAICS-2012 in which the business primarily operates.</inlineHelpText>
    <label>HG NAICS Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>