force-app/main/default/objects/Account/fields/HG_Revenue_Band__c.field-meta.xml
<CustomField>
    <fullName>HG_Revenue_Band__c</fullName>
    <description>HG Insights&apos; banding label to the monetary value of income received from customers from the sale of the business&apos; goods and/or services to support grouping.</description>
    <inlineHelpText>HG Insights&apos; banding label to the monetary value of income received from customers from the sale of the business&apos; goods and/or services to support grouping.</inlineHelpText>
    <label>Revenue Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Less than $10m</fullName>
            </value>
            <value>
                <fullName>2. $10m to $25m</fullName>
            </value>
            <value>
                <fullName>3. $25m to $50m</fullName>
            </value>
            <value>
                <fullName>4. $50m to $250m</fullName>
            </value>
            <value>
                <fullName>5. $250m to $500m</fullName>
            </value>
            <value>
                <fullName>6. $500m to $1bn</fullName>
            </value>
            <value>
                <fullName>7. $1bn to $5bn</fullName>
            </value>
            <value>
                <fullName>8. $5bn and above</fullName>
            </value>
            <value>
                <fullName>9. Under review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>