force-app/main/default/objects/Account/fields/HG_State__c.field-meta.xml
<CustomField>
    <fullName>HG_State__c</fullName>
    <description>HG Insights&apos; state name/province where the business is located.</description>
    <inlineHelpText>HG Insights&apos; state name/province where the business is located.</inlineHelpText>
    <label>HG State</label>
    <type>TextArea</type>
</CustomField>