force-app/main/default/objects/Account/fields/HG_Total_Employees__c.field-meta.xml
<CustomField>
    <fullName>HG_Total_Employees__c</fullName>
    <description>HG Insights&apos; total number of employees that are directly engaged and paid by the organization to perform or support its business operations to support grouping.</description>
    <inlineHelpText>HG Insights&apos; total number of employees that are directly engaged and paid by the organization to perform or support its business operations to support grouping.</inlineHelpText>
    <label>HG Total Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>