force-app/main/default/objects/Account/fields/HG_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HG_Total_Revenue__c</fullName>
    <description>HG Insights&apos; total monetary value of income received from customers from the sale of the business&apos; goods and/or services to support grouping.</description>
    <inlineHelpText>HG Insights&apos; total monetary value of income received from customers from the sale of the business&apos; goods and/or services to support grouping.</inlineHelpText>
    <label>HG Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>