force-app/main/default/objects/Account/fields/Hierarchy_Partner_Account_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Partner_Account_Reporting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hierarchy Partner Account Reporting Record</description>
    <label>Hierarchy Partner Account Reporting</label>
    <referenceTo>PartnerAccountReporting__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>