force-app/main/default/objects/Account/fields/HowIsCamundaBeingUsed__c.field-meta.xml
<CustomField>
    <fullName>HowIsCamundaBeingUsed__c</fullName>
    <description>Rollup How Is Camunda Being Used</description>
    <formula>if( or(MaxUsingCamundaContacts__c=3,   MaxUsingCamundaRollup__c  =3),&quot;In Production&quot;,
if( or(MaxUsingCamundaContacts__c=2,  MaxUsingCamundaRollup__c  =2),&quot;In Development&quot;,
if( or(MaxUsingCamundaContacts__c=1,  MaxUsingCamundaRollup__c  =1),&quot;Evaluating&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rollup How Is Camunda Being Used</inlineHelpText>
    <label>How Is Camunda Being Used</label>
    <type>Text</type>
</CustomField>