force-app/main/default/objects/Account/fields/Hubspot_Score_without_Demographic__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Score_without_Demographic__c</fullName>
    <label>Hubspot Score without Demographic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>