force-app/main/default/objects/Account/fields/HubspotCompanyID__c.field-meta.xml
<CustomField>
    <fullName>HubspotCompanyID__c</fullName>
    <externalId>true</externalId>
    <label>Hubspot Company ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>