force-app/main/default/objects/Account/fields/ICP__c.field-meta.xml
<CustomField>
    <fullName>ICP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PAR &amp; 1K+ Employees</description>
    <inlineHelpText>PAR &amp; 1K+ Employees</inlineHelpText>
    <label>ICP</label>
    <type>Checkbox</type>
</CustomField>