force-app/main/default/objects/Account/fields/Implementing_DevOps__c.field-meta.xml
<CustomField>
    <fullName>Implementing_DevOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementing DevOps</label>
    <type>Checkbox</type>
</CustomField>