force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry</valueSetName>
    </valueSet>
</CustomField>