force-app/main/default/objects/Account/fields/influ2_Impressions__c.field-meta.xml
<CustomField>
    <fullName>influ2_Impressions__c</fullName>
    <label>influ2 - Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>