force-app/main/default/objects/Account/fields/influ2_Last_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>influ2_Last_Click_Date__c</fullName>
    <label>influ2 - Last Click Date</label>
    <type>DateTime</type>
</CustomField>