force-app/main/default/objects/Account/fields/influ2_Last_clicked_creative_name__c.field-meta.xml
<CustomField>
    <fullName>influ2_Last_clicked_creative_name__c</fullName>
    <label>influ2 - Last clicked creative name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>