force-app/main/default/objects/Account/fields/influ2_Last_clicked_creative_URL__c.field-meta.xml
<CustomField>
    <fullName>influ2_Last_clicked_creative_URL__c</fullName>
    <label>influ2 - Last clicked creative URL</label>
    <type>Url</type>
</CustomField>