force-app/main/default/objects/Account/fields/Initial_Contract_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_Effective_Start_Date__c</fullName>
    <label>Initial Contract - Effective Start Date</label>
    <summarizedField>Opportunity.begin__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>