force-app/main/default/objects/Account/fields/Ironclad_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Ironclad_Company_Type__c</fullName>
    <formula>IF(RecordType.Name=&quot;Partner&quot;, &quot;Partner&quot;,&quot;Customer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ironclad Company Type</label>
    <type>Text</type>
</CustomField>