force-app/main/default/objects/Account/fields/Ironclad_Contractual_Amendment_URL__c.field-meta.xml
<CustomField>
    <fullName>Ironclad_Contractual_Amendment_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://ironcladapp.com/workflows/6034041a7c9e99795c3b6390/launch/6197c839eaca44c8928a8f0c?source=5e01eb46-b2ca-4c6b-935f-fbb499bad44a&amp;externalId=&quot;&amp;Full_ID__c,&quot;Click to Start an Amendment Request / Review in Ironclad&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractual Amendment (unrelated to opp)</label>
    <type>Text</type>
</CustomField>